# spacebar

./: .Cargo..swp  .gitignore  .gitlab-ci.yml  .travis.yml  CNAME  Cargo.toml  LICENSE.md  README.md  Rocket.toml  travis.yml
docs/: index.html
middleware/: client.py  jsn.py  middleware.md  preprocess.py  prox.py  proxy.py  sep.py  serv.py  test.py
src/: SpacebarGenerator.rs  board.rs  clipboard.rs  database.rs  generator.rs  insert.rs  main.rs  parser.rs  scrape.rs  spacebar.sql  spacebar_generator.rs  token_generator.rs  user.rs
