[package]
name = "spacebar"
version = "0.1.2"
authors = ["Chad Baxter"]
description = "An anti-plagiarism tool based on null width characters."
repository = "https://www.github.com/LogoiLab/spacebar"
license-file = "LICENSE.md"
travis-ci = { repository = "LogoiLab/spacebar", branch = "master" }
publish = true

[dependencies]
clap = "2.29.4"
clipboard = "0.4.2"
rand = "0.4.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
spinners = "1.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
