[package]
name = "spacebar"
version = "0.3.0-rc1"
authors = ["Chad Baxter"]
description = "An anti-plagiarism tool based on null width characters."
repository = "https://www.github.com/LogoiLab/spacebar"
license-file = "LICENSE.md"
travis-ci = { repository = "LogoiLab/spacebar", branch = "master" }
publish = true
edition = "2018"

[dependencies]
clap = "2.33.0"
copypasta = "0.6.3"
env_logger = "0.7.1"
log = "0.4.8"
prettytable-rs = "0.8.0"
rand = "0.7.3"
reqwest = { version = "0.10.4", features = ["blocking"] }
rusqlite = "0.21.0"
spinners = "1.2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'